# pytest-eliot

./: README.md  mkdocs.yml  setup.cfg
docs/: index.md  testing.md
pytest_eliot/: plugin.py
tests/: test_fixtures.py
