[metadata]
name = pytest-eliot
description = An eliot plugin for pytest.
long_description = README.md
long_description_content_type = text/markdown
author = Jonathan Sandoval
author_email = jsandoval@utp.edu.co
maintainer = Jonathan Sandoval
maintainer_email = jsandoval@utp.edu.co
url = https://to-be-defined
license = Apache Software License
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Environment :: Plugins
project_urls =
    Source=https://github.com/pytest-dev/pytest-django
    Changelog=https://pytest-django.readthedocs.io/en/latest/changelog.html

[options]
packages =
    pytest_eliot
    tests
python_requires = >=3.6
setup_requires = setuptools_scm>=5.0.0
install_requires =
    pytest>=5.4.0
    eliot>=1.14.0

[options.entry_points]
pytest11 =
    eliot = pytest_eliot.plugin

[options.extras_require]
testing = eliot
docs = mkdocs

