[metadata]
name = pytest-eliot
version = 0.0.1
description = An eliot plugin for pytest.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jonathan Sandoval
author_email = jsandoval@utp.edu.co
maintainer = Jonathan Sandoval
maintainer_email = jsandoval@utp.edu.co
url = https://github.com/jsandovalc/pytest-eliot
license = Apache Software License
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Environment :: Plugins
project_urls =
    Source=https://github.com/jsandovalc/pytest-eliot

[options]
packages =
    pytest_eliot
python_requires = >=3.9
install_requires =
    pytest>=5.4.0
    eliot>=1.14.0

[options.entry_points]
pytest11 =
    eliot = pytest_eliot.plugin

[options.extras_require]
testing = eliot
docs = mkdocs

